<resources>
    <string name="app_name">TaserFAN</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings_theme_key">Theme</string>
    <string name="email">Email</string>
    <string name="contrasenya">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="standard">Standard</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="spanish">Español</string>
    <string name="english">English</string>
    <string name="currently">Actualmente </string>
    <string name="settings">Settings</string>
    <string name="settings_theme_title">Theme for the app</string>
    <string name="settings_theme_dialog_title">Select the mode for the app</string>
    <string name="default_string">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="exit">Exit</string>

    <!-- Vehicle info -->
    <string name="registration">Registration</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="price">Price/h</string>

    <!-- Vehicle details -->
    <string name="marca">Marca</string>
    <string name="carnet">Carnet</string>
    <string name="bateria">Bateria</string>
    <string name="estado">Estado</string>
    <string name="fecha_adq">Fecha adq.</string>
    <string name="puertas">Puertas</string>
    <string name="plazas">Plazas</string>
    <string name="vel_max">Vel. max.</string>
    <string name="cilindrada">Cilindrada</string>
    <string name="tipo">Tipo</string>
    <string name="ruedas">Ruedas</string>
    <string name="tamanyo">Tamaño</string>
</resources>