<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Una categoria">
        <EditTextPreference
            android:defaultValue="10.13.0.129"
            android:inputType="number"
            android:key="ipKey"
            android:summary="Ejemplo EditTextPreference"
            android:title="EditTextPreference" />

        <EditTextPreference
            android:defaultValue="4567"
            android:inputType="number"
            android:key="portKey"
            android:summary="Ejemplo EditTextPreference"
            android:title="EditTextPreference" />

        <ListPreference
            android:dialogTitle="@string/settings_theme_dialog_title"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:key="@string/settings_theme_key"
            android:title="@string/settings_theme_title"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>