<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        android:text="1111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/TextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/TextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/TextPassword"
        app:layout_constraintStart_toStartOf="@+id/TextPassword"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="pepa@mordor.es"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_login_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>