<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVehicleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="type spinner"
                android:scrollbarSize="20dp"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="16dp">

                <Spinner
                    android:id="@+id/carnetSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:contentDescription="carnet spinner"
                    android:scrollbarSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/carnet"
                    app:layout_constraintStart_toEndOf="@+id/carnet"
                    app:layout_constraintTop_toTopOf="@+id/carnet"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/vehicleImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="vehicle img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/matricula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="matricula"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/vehicleImg"
                    app:layout_constraintStart_toStartOf="@+id/vehicleImg"
                    app:layout_constraintTop_toBottomOf="@+id/vehicleImg"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/marca"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/matricula" />

                <TextView
                    android:id="@+id/carnet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/carnet"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/color"
                    app:layout_constraintTop_toBottomOf="@+id/color" />

                <TextView
                    android:id="@+id/bateria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/bateria"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/carnet"
                    app:layout_constraintTop_toBottomOf="@+id/carnet" />

                <TextView
                    android:id="@+id/color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/marca"
                    app:layout_constraintTop_toBottomOf="@+id/marca" />

                <TextView
                    android:id="@+id/estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/estado"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/bateria"
                    app:layout_constraintTop_toBottomOf="@+id/bateria" />

                <EditText
                    android:id="@+id/marcaAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/marca"
                    app:layout_constraintStart_toEndOf="@+id/marca"
                    app:layout_constraintTop_toTopOf="@+id/marca"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/bateriaAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/bateria"
                    app:layout_constraintStart_toEndOf="@+id/bateria"
                    app:layout_constraintTop_toTopOf="@+id/bateria"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:contentDescription="color spinner"
                    android:scrollbarSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/color"
                    app:layout_constraintStart_toEndOf="@+id/color"
                    app:layout_constraintTop_toTopOf="@+id/color"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/estadoSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:contentDescription="estado spinner"
                    android:scrollbarSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/estado"
                    app:layout_constraintStart_toEndOf="@+id/estado"
                    app:layout_constraintTop_toTopOf="@+id/estado"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lcAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:id="@+id/puertas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/puertas"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/plazas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/plazas"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/puertas"
                    app:layout_constraintTop_toBottomOf="@+id/puertas" />

                <EditText
                    android:id="@+id/puertasAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/puertas"
                    app:layout_constraintStart_toEndOf="@+id/puertas"
                    app:layout_constraintTop_toTopOf="@+id/puertas" />

                <EditText
                    android:id="@+id/plazasAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/plazas"
                    app:layout_constraintStart_toEndOf="@+id/plazas"
                    app:layout_constraintTop_toTopOf="@+id/plazas" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lmAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:id="@+id/velmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/vel_max"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cilindrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/cilindrada"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/velmax"
                    app:layout_constraintTop_toBottomOf="@+id/velmax" />

                <EditText
                    android:id="@+id/velmaxAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/velmax"
                    app:layout_constraintStart_toEndOf="@+id/velmax"
                    app:layout_constraintTop_toTopOf="@+id/velmax" />

                <EditText
                    android:id="@+id/cilindradaAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cilindrada"
                    app:layout_constraintStart_toEndOf="@+id/cilindrada"
                    app:layout_constraintTop_toTopOf="@+id/cilindrada" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lbAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tipo"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/tipoAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tipo"
                    app:layout_constraintStart_toEndOf="@+id/tipo"
                    app:layout_constraintTop_toTopOf="@+id/tipo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lsAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:id="@+id/numruedas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ruedas"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tamanyo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/tamanyo"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/numruedas"
                    app:layout_constraintTop_toBottomOf="@+id/numruedas" />

                <EditText
                    android:id="@+id/numruedasAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/numruedas"
                    app:layout_constraintStart_toEndOf="@+id/numruedas"
                    app:layout_constraintTop_toTopOf="@+id/numruedas" />

                <EditText
                    android:id="@+id/tamanyoAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tamanyo"
                    app:layout_constraintStart_toEndOf="@+id/tamanyo"
                    app:layout_constraintTop_toTopOf="@+id/tamanyo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible">

                <EditText
                    android:id="@+id/precioAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintBottom_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/addokbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                android:text="INSERTAR" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>